--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.7",
-    "socket.io-client": "^4.7.4",
     "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/vue3": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11"
+    "@fullcalendar/vue3": "^6.1.11",
+    "axios": "^1.6.7",
+    "pinia": "^2.1.7",
+    "socket.io-client": "^4.7.4",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1",
+    "vite": "^6.2.0"
   }
 }
