--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/google-calendar": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.11",
-    "@fullcalendar/vue3": "^6.1.11",
+    "@fullcalendar/vue3": "^6.1.15",
     "axios": "^1.6.7",
+    "googleapis": "^146.0.0",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
     "vue": "^3.5.13",
