--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.15",
     "axios": "^1.6.7",
+    "dompurify": "^3.2.4",
     "googleapis": "^146.0.0",
+    "marked": "^15.0.7",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
     "vue": "^3.5.13",
