feat: 카카오 소셜 로그인 및 인증 시스템 개선
- 카카오 로그인 콜백 페이지(KakaoCallback.vue) 추가
- 라우터에 카카오 콜백 라우트 등록
- 인증 스토어(auth.js) 쿠키 기반 인증으로 리팩토링
- axios 인터셉터에 withCredentials 옵션 추가
- 로그인 페이지에 카카오 로그인 버튼 및 로직 구현
- .gitignore에 환경 변수 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 *-[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].json
 docs/graphite-space-*.json
 *credentials*.json
+
+# 환경 변수
+.env
+.env.local
+.env.development
+.env.production
