--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ dist-ssr
 *-[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].json
 docs/graphite-space-*.json
 *credentials*.json
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
