--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,10 @@
 VUE_APP_GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
 
 # 구글 캘린더 ID
-VUE_APP_GOOGLE_CALENDAR_ID=primary 
+VUE_APP_GOOGLE_CALENDAR_ID=primary
+
+# 카카오 API 키
+VITE_KAKAO_REST_API_KEY=카카오에서_발급받은_클라이언트_ID
+
+VITE_NAVER_CLIENT_ID=네이버에서_발급받은_클라이언트_ID
+VITE_NAVER_REDIRECT_URI=http://127.0.0.1:8000/v1/accounts/naver/callback
