feat: 소셜 로그인 콜백 페이지 개선 및 환경 설정 최적화
- .env.example 및 .env.production 파일에 환경별 설정 추가
- KakaoCallback.vue 및 NaverCallback.vue 개선
  - 로딩 상태 및 오류 처리 로직 추가
  - 사용자 경험 향상을 위한 알림 및 리다이렉션 최적화
- Login.vue에서 소셜 로그인 초기화 시 환경 변수 및 오류 처리 강화

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,15 @@ VUE_APP_GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
 # 구글 캘린더 ID
 VUE_APP_GOOGLE_CALENDAR_ID=primary
 
-# 카카오 API 키
+# 환경 설정 (local 또는 production)
+VITE_APP_ENV=local  # 로컬 개발 환경은 local, 배포 환경은 production으로 설정
+
+# 소셜 로그인 설정
 VITE_KAKAO_REST_API_KEY=카카오에서_발급받은_클라이언트_ID
+VITE_KAKAO_REDIRECT_URI=http://127.0.0.1:8000/v1/accounts/kakao/callback  # 로컬 환경
 
 VITE_NAVER_CLIENT_ID=네이버에서_발급받은_클라이언트_ID
-VITE_NAVER_REDIRECT_URI=http://127.0.0.1:8000/v1/accounts/naver/callback
+VITE_NAVER_REDIRECT_URI=http://127.0.0.1:8000/v1/accounts/naver/callback  # 로컬 환경
+
+# API 서버 주소
+VITE_API_BASE_URL=http://127.0.0.1:8000/v1  # 로컬 개발 환경
