--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.4.47",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "googleapis": "^146.0.0",
     "marked": "^15.0.7",
